--- a/elastic25/logstash.conf
+++ b/elastic25/logstash.conf
@@ -17,7 +17,7 @@ input {
     gelf {
         type => docker44
         # host => "10.0.53.216"     # this wont work... 
-        # host => "0.0.0.0"         # this WORKS - but we wont need as we run logstash
+        host => "0.0.0.0"         # this WORKS - but we wont need as we run logstash
                                         # in a docker container... had we run logstash
                                         # directly without docker, then we can give different hosts
         port => 12201
