learning elastic search

--- a/elastic26/sysctl.conf
+++ b/elastic26/sysctl.conf
@@ -1,1 +1,4 @@
 vm.max_map_count=262144
+### this setting must be changed in host machine where docker containers are running
+### CHANGE ===> /etc/sysctl.conf in host machine
+### not needed ===> to change in docker container 
