--- a/elastic26/docker-compose.yml
+++ b/elastic26/docker-compose.yml
@@ -9,13 +9,14 @@ services:
       - cluster.initial_master_nodes=es01,es02,es03
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    # command: ['sysctl', '-w', 'vm.max_map_count=262144']
     ulimits:
       memlock:
         soft: -1
         hard: -1
     volumes:
       - /usr/share/elasticsearch/data
-      - ./sysctl.conf:/etc/sysctl.conf
+      # - ./sysctl.conf:/etc/sysctl.conf      ### sysctl -w vm.max_map_count=262144; cat /etc/sysctl.conf
     ports:
       - 9200:9200
     networks:
@@ -36,7 +37,7 @@ services:
         hard: -1
     volumes:
       - /usr/share/elasticsearch/data
-      - ./sysctl.conf:/etc/sysctl.conf
+      # - ./sysctl.conf:/etc/sysctl.conf
     networks:
       - elasticNw23
   es03:
@@ -55,7 +56,7 @@ services:
         hard: -1
     volumes:
       - /usr/share/elasticsearch/data
-      - ./sysctl.conf:/etc/sysctl.conf
+      # - ./sysctl.conf:/etc/sysctl.conf
     networks:
       - elasticNw23
 
