--- a/elastic26/docker-compose.yml
+++ b/elastic26/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - discovery.seed_hosts=es02,es03
       - cluster.initial_master_nodes=es01,es02,es03
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      # - "ES_JAVA_OPTS=-Xms6g -Xmx6g"
     # command: ['sysctl', '-w', 'vm.max_map_count=262144']
     ulimits:
       memlock:
@@ -16,7 +16,8 @@ services:
         hard: -1
     volumes:
       - /usr/share/elasticsearch/data
-      # - ./sysctl.conf:/etc/sysctl.conf      ### sysctl -w vm.max_map_count=262144; cat /etc/sysctl.conf
+      - ./heap23a.options:/usr/share/elasticsearch/config/jvm.options.d/heap23a.options
+      - ./elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
     ports:
       - 9200:9200
     networks:
@@ -30,13 +31,15 @@ services:
       - discovery.seed_hosts=es01,es03
       - cluster.initial_master_nodes=es01,es02,es03
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      # - "ES_JAVA_OPTS=-Xms6g -Xmx6g"
     ulimits:
       memlock:
         soft: -1
         hard: -1
     volumes:
       - /usr/share/elasticsearch/data
+      - ./heap23b.options:/usr/share/elasticsearch/config/jvm.options.d/heap23b.options
+      - ./elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
       # - ./sysctl.conf:/etc/sysctl.conf
     networks:
       - elasticNw23
@@ -49,13 +52,20 @@ services:
       - discovery.seed_hosts=es01,es02
       - cluster.initial_master_nodes=es01,es02,es03
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"      ### one is Xms, another is Xmx
+      # # set -Xms and -Xmx to the SAME value
+      # # it should be 50% of your total available RAM 
+      # # subject to a maximum of 31GB
+      # - "ES_JAVA_OPTS=-Xms6g -Xmx6g"      ### one is Xms, another is Xmx
+      # # ES_JAVA_OPTS: -Xms512m -Xmx512m       ### either use : (or) =
+
     ulimits:
       memlock:
         soft: -1
         hard: -1
     volumes:
       - /usr/share/elasticsearch/data
+      - ./heap23c.options:/usr/share/elasticsearch/config/jvm.options.d/heap23c.options
+      - ./elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
       # - ./sysctl.conf:/etc/sysctl.conf
     networks:
       - elasticNw23
