--- a/elastic26/sysctl.conf
+++ b/elastic26/sysctl.conf
@@ -2,3 +2,8 @@ vm.max_map_count=262144
 ### this setting must be changed in host machine where docker containers are running
 ### CHANGE ===> /etc/sysctl.conf in host machine
 ### not needed ===> to change in docker container 
+
+
+# sudo sysctl -w vm.max_map_count=262144
+### the setting will only last for the duration of the session. If the host reboots, the setting will be reset to the original value.
+### If you want to set this permanently, you need to edit /etc/sysctl.conf and set vm.max_map_count = 262144
